# compintpy

./: .appveyor.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  format.yml  pip.yml  wheels.yml
comppy/: elias.py
conda.recipe/: meta.yaml
data/: compression_test_results.csv  decompression_test_results.csv
docs/: Makefile  cmake_example.rst  comppy.rst  conf.py  index.rst  make.bat
scripts/: speed_tests.py
src/: main.cpp
tests/: test_basic.py  test_elias.py
