[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "comppy"
version = "0.0.2"
description = ""
authors = ["Jeffrey Wigger"]

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
sphinx = "^7.2.6"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.mypy]
files = "setup.py"
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

[tool.ruff]
extend-select = [
  "B",    # flake8-bugbear
  "B904",
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py37"

[tool.black]
line-length = 120
target-version = ['py39']
exclude = "/(pybind11|build)"

[tool.isort]
profile = "black"
lines_after_imports = 2
lines_between_types = 1
known_first_party = ["commpy", "_comppy"]
skip = ["pybind11", "build"]
